# sim2real-bipedal-locomotion

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
assets/: biped.xml
configs/: domain_rand.yaml  env.yaml  train.yaml
ros2_ws/src/bipedal_controller/: package.xml  setup.cfg  setup.py
ros2_ws/src/bipedal_controller/action/: Walk.action
ros2_ws/src/bipedal_controller/bipedal_controller/: hardware_interface.py  policy_server.py
ros2_ws/src/bipedal_controller/launch/: controller.launch.py
scripts/: evaluate.py  export_onnx.py  train.py  visualize.py
sim2real/algo/: __init__.py  actor_critic.py  normalizer.py  ppo.py  rollout_buffer.py
sim2real/envs/: __init__.py  bipedal_env.py  domain_randomization.py  reward.py  terrain.py
sim2real/export/: onnx_export.py
sim2real/utils/: checkpoint.py  config.py  logger.py
tests/: test_domain_rand.py  test_env.py  test_ppo.py  test_reward.py
